# FunASR

runtime/grpc/: CMakeLists.txt  common.cmake  funasr-grpc-server.cc  funasr-grpc-server.h
runtime/onnxruntime/src/: funasrruntime.cpp
runtime/python/grpc/proto/: paraformer.proto
